istio/flagger/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flagger
spec:
  template:
    spec:
      containers:
        - name: flagger
          args:
            - -log-level=info
            - -mesh-provider=istio
            - -metrics-server=http://prometheus:9090
            - -slack-user=flagger
            - -slack-channel=
            - -slack-url=
